@startuml
skinparam nodesep 60
skinparam ranksep 80
top to bottom direction

package "User Module" {
    entity User {
        id <<PK>>
        roleId <<FK>>
        parentId
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        userName
        dob
        phone
        email
        password
    }

    entity Role {
        id <<PK>>
        name
    }
    entity Module {
        id <<PK>>
        name
        path
    }
    entity Action {
        id <<PK>>
        name
        path
    }
    entity Permission {
        id <<PK>>
        moduleId <<FK>>
        actionId <<FK>>
        name
    }
    entity RolePermission {
        id <<PK>>
        roleId <<FK>>
        permissionId <<FK>>
    }
}

package "Story Module" {
    entity Story {
        id <<PK>>
        approvedBy <<FK>>
        coverImage <<FK>>
        version
        title
        author
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        approvedAt
        rejectedReason
        duration
        isPremium
        description
        entryPoint
        localization
    }

    entity StoryState {
        id <<PK>>
        storyId <<PK>> <<FK>>
        type
        background
        music
        actors
        onEnter
        transitions
        aiContext
    }

    entity StoryScript {
        id <<PK>>
        storyId <<PK>> <<FK>>
        language
        lines
    }

    entity StoryIntent {
        id <<PK>>
        storyId <<PK>> <<FK>>
        keywords
    }

    entity StoryEmbedding {
        id <<PK>>
        storyId <<FK>>
        stateId
        content
        embedding
        createdAt
    }

    entity StoryFeedback {
        id <<PK>>
        storyId <<FK>>
        createdUser <<FK>>
        status
        createdAt
        updatedAt
        updatedUser
        rate
        content
    }

    entity UserFeedback {
        id <<PK>>
        createdUser <<FK>>
        status
        createdAt
        updatedAt
        updatedUser
        rate
        content
    }

    entity GraphicAsset {
        id <<PK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        description
        imageUrl
        type
    }

    entity AudioAsset {
        id <<PK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        description
        audioUrl
        type
    }

    ' entity ActorConfig {
    '     actorId
    '     riveAsset
    '     stateMachineName
    '     riveInputs
    '     position
    ' }

    ' entity OnEnterAction {
    '     playScript
    '     actorAnimations
    ' }

    ' entity Transition {
    '     on
    '     intentId
    '     targetState
    ' }

    ' entity ScriptLine {
    '     id
    '     actorId
    '     audioAsset <<FK>>
    '     text
    '     ttsConfig
    '     sfx
    '     waitAfter
    '     animationTrigger
    ' }
}

package "Assignment Module" {
    entity Topic {
        id <<PK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        description
    }

    entity Assignment {
        id <<PK>>
        topicId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        description
        total
        isShuffle
        isPremium
    }

    entity QuestionBank {
        id <<PK>>
        assignmentId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        questionList
    }
}

package "Logs & Payments Module" {
    entity ChildrenStoryLog {
        id <<PK>>
        userId <<FK>>
        storyId <<FK>>
        status
        createdAt
        updatedAt
        completedAt
        content
    }

    entity AssignmentLog {
        id <<PK>>
        assignmentId <<FK>>
        userId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        questionList
        finishedAt
        version
    }

    entity PreorderStory {
        id <<PK>>
        userId <<FK>>
        storyId <<FK>>
        status
        orderDate
    }

    entity BlackListStory {
        id <<PK>>
        userId <<FK>>
        storyId <<FK>>
        status
    }

    entity TimeLimit {
        id <<PK>>
        userId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        limitDate
        limitTime
    }

    entity ParentPayment {
        id <<PK>>
        userId <<FK>>
        paymentTypeId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        total
        startDate
        endDate
    }

    entity PaymentType {
        id <<PK>>
        name
    }
}

package "Game Module" {
    entity GameType {
        id <<PK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
    }

    entity GameBank {
        id <<PK>>
        gameTypeId <<FK>>
        topicId <<FK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        name
        description
        imageUrl
        view
        ageGroup
        isPremium
    }

    entity GameLog {
        id <<PK>>
        userId <<FK>>
        gameBankId <<FK>>
        status
        createdAt
        score
        finishedAt
    }
}

package "Notification Module" {
    entity Notification {
        id <<PK>>
        status
        createdAt
        createdUser
        updatedAt
        updatedUser
        title
        content
        type
        isBroadcast
    }

    entity NotificationTarget {
        id <<PK>>
        notificationId <<FK>>
        userId <<FK>>
    }

    entity NotificationLog {
        id <<PK>>
        notificationId <<FK>>
        userId <<FK>>
        isRead
        readAt
    }
}

' ─── User Module ───────────────────────────────
User }o--|| User : parent of
User ||--|| Role
RolePermission }o--|| Role
RolePermission }o--|| Permission
Permission }o--|| Module
Permission }o--|| Action

' ─── Story Module ──────────────────────────────
Story }o--|| GraphicAsset
Story ||--o{ StoryState
Story ||--o{ StoryScript
Story ||--o{ StoryIntent
Story ||--o{ StoryEmbedding
Story ||--o{ StoryFeedback
' StoryState *-- ActorConfig
' StoryState *-- OnEnterAction
' StoryState *-- Transition
' StoryScript *-- ScriptLine
ScriptLine }o--|| AudioAsset
User ||--o{ Story : creates
User ||--o{ Story : approves
User ||--o{ StoryFeedback
User ||--|| UserFeedback

' ─── Assignment Module ─────────────────────────
Assignment }o-left-|| Topic
Assignment ||-right-|| QuestionBank
Assignment ||-down-o{ AssignmentLog

' ─── Game Module ───────────────────────────────
GameBank }o--|| GameType
GameBank }o--|| Topic
GameBank ||--o{ GameLog
User ||--o{ GameLog

' ─── Logs & Payments ───────────────────────────
Story ||-down-o{ ChildrenStoryLog
Story ||-down-o{ PreorderStory
Story ||--o{ BlackListStory
User ||--o{ ChildrenStoryLog
User ||--o{ AssignmentLog
User ||--o{ PreorderStory
User ||-right-|| BlackListStory
User ||--o{ TimeLimit
User ||--o{ ParentPayment
ParentPayment }o--|| PaymentType

' ─── Notification Module ───────────────────────
Notification ||--o{ NotificationTarget
Notification ||--o{ NotificationLog
NotificationTarget }o--|| User
NotificationLog }o--|| User

@enduml